--- a/testapp/en.lproj/MainStoryboard_iPadTwo.storyboard
+++ b/testapp/en.lproj/MainStoryboard_iPadTwo.storyboard
@@ -340,6 +340,12 @@
                                                     </connections>
                                                 </barButtonItem>
                                                 <barButtonItem style="plain" systemItem="flexibleSpace" id="XQQ-SQ-PAm"/>
+                                                <barButtonItem image="player_play_off.png" style="plain" id="XxJ-lC-wAK">
+                                                    <connections>
+                                                        <action selector="onPlay:" destination="wdx-xa-pdn" id="lzV-Mf-rD7"/>
+                                                    </connections>
+                                                </barButtonItem>
+                                                <barButtonItem style="plain" systemItem="flexibleSpace" id="sW9-LN-1HA"/>
                                             </items>
                                         </toolbar>
                                         <imageView clipsSubviews="YES" tag="2" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="0jQ-nY-ZIX">
